<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_weight="2"
            android:id="@+id/tv_id"
            android:text="@string/id"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            tools:ignore="LabelFor"
            android:id="@+id/et_id"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:importantForAutofill="no"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="3">
    <TextView
        android:layout_weight="2"
        android:id="@+id/tv_name"
        android:text="@string/name"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        tools:ignore="LabelFor"
        android:id="@+id/et_name"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="text" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_weight="2"
            android:id="@+id/tv_toan"
            android:text="@string/i_m_to_n"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            tools:ignore="LabelFor"
            android:id="@+id/et_toan"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_weight="2"
            android:id="@+id/tv_li"
            android:text="@string/diemli"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            tools:ignore="LabelFor"
            android:id="@+id/et_li"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_weight="2"
            android:id="@+id/tv_hoa"
            android:text="@string/diemhoa"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            tools:ignore="LabelFor"
            android:id="@+id/et_hoa"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">
        <Button
            android:id="@+id/bt_them"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/bt_them"
            android:textSize="24sp"
            style="@style/TextAppearance.AppCompat"/>
        <Button
            android:id="@+id/bt_sua"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/bt_sua"
            android:textSize="24sp"
            style="@style/TextAppearance.AppCompat"/>
        <Button
            android:id="@+id/bt_xoa"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/bt_xoa"
            android:textSize="24sp"
            style="@style/TextAppearance.AppCompat"/>
    </LinearLayout>
</LinearLayout>